Add endpoint to return last value of a thing property
